# raspberry-pi-forth-os

./: .gitignore  Cargo.toml  Makefile  default.nix  shell.nix
.cargo/: config
boot/: sfdisk.txt
nix/: local-qemu-mmu-logs.patch  rust.nix  sources.json
src/: allocator.rs  boot.pi3-4.S  console.rs  exceptions.aarch64.S  exceptions.aarch64.h  interrupts.rs  lib.rs  linker-32.ld  linker-64.ld  panic_handler.rs
src/asm/32/: boot.S
src/asm/64/: boot.S  boot.h  exceptions.S  mmu_init.h  semihosting.S.bak  semihosting.h.bak
src/console/: printf.rs
src/interrupts/: handlers.rs
src/rpi/: boot.rs  console.rs  framebuffer.rs  mailbox.rs  mmio.rs  mmu_64.rs  mod.rs  semihosting.rs  uart.rs  usb.rs
src/rpi/mmu_64/: addrs.rs  descriptors.rs  early_init.rs  levels.rs  page_tables.rs  ttbr.rs
src/rpi/uart/: uart0.rs  uart1.rs
