[package]
name = "raspberry-pi-forth-os"
version = "0.1.0"
authors = ["Cassie Meharry <bluejeansummer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []

rpi2 = []
rpi3 = []

[dependencies]
bitflags = "1"
font8x8 = { version = "0.2", default-features = false, features = ["unicode"] }
panic-halt = "0.2"
spin = "0.5"

[dependencies.byteorder]
version = "1.3"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
