[package]
name = "raspberry-pi-forth-os"
version = "0.1.0"
authors = ["Cassie Meharry <bluejeansummer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []

rpi2 = []
rpi3 = []
semihosting = []

[dependencies]
bitflags = "1"
bitfield = "0.13"
bit_field = "0.10"
cfg-if = "0.1"
enum-repr = "0.2"
field-offset = { path = "../../sources/rust-field-offset" }
font8x8 = { version = "0.2", default-features = false, features = ["unicode"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
linked_list_allocator = "0.8"
# panic-halt = "0.2"
qemu-exit = "0.1"
spin = "0.5"

[dependencies.byteorder]
version = "1.3"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[profile.release.overrides."*"]
debug = false
